metrics/network-policy-monitoring-allow-egress-external-access-daily-report-smtp.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-external-access-daily-report-smtp
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: external-access-daily-report
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25
